--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: white;
     margin: 0px;
     padding: 0px;
-    background: url('https://user-images.githubusercontent.com/87318297/155513901-fd2f73ae-2905-430c-9fa4-eb4847a87dce.jpeg');
+    background: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Ftime.com%2F5795492%2Fgym-fitness-studio-coronavirus%2F&psig=AOvVaw06pyu0UjXtbNraZ9uRyt27&ust=1652498337126000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKCfuq_C2_cCFQAAAAAdAAAAABAD');
 }
 
 .left {
